Add coloured blocks as background images to danger square divs and remove placeholder numbers

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 	<section class="flex-container">
 		<div id="creature-box">
 			<div id="danger-box">
-			<div class="danger-square">5</div>
-			<div class="danger-square">4</div>	
-			<div class="danger-square">3</div>
-			<div class="danger-square">2</div>
-			<div class="danger-square">1</div>
+			<div class="danger-square" id="danger-square-05"></div>
+			<div class="danger-square" id="danger-square-04"></div>	
+			<div class="danger-square" id="danger-square-03"></div>
+			<div class="danger-square" id="danger-square-02"></div>
+			<div class="danger-square" id="danger-square-01"></div>
 			</div>
 			<div id="view-box">
 			</div>
