--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<h1 id="title">TRIVIA SURVIVOR</h1>
 			<h3 id="sub-title">[Demo of the Dead]</h3>
 			<div id="enter-name">
-				<form onsubmit="chooseDifficulty()">
+				<form action="javascript:void(0);" onsubmit="chooseDifficulty()">
 				<label for="name">Enter your name to begin:</label><br>
 				<input type="text" id="name" name="name" placeholder="Name" required><br>
 				<button type="submit" name="start-btn" id="start-btn" class="start-btn btn">Start</button>
@@ -32,10 +32,10 @@
 			</div>
 		</div>
 
-	</section>
+	
 		<!-- Game Card Section, the main portion of the game -->
-	<section class="flex-container">
-		<div id="creature-box">
+	
+		<div id="creature-box" class="hidden">
 			<div id="danger-box">
 			<div class="danger-square" id="danger-square-05"></div>
 			<div class="danger-square" id="danger-square-04"></div>	
@@ -46,7 +46,7 @@
 			<div id="view-box">
 			</div>
 		</div>
-		<div id="question-box">
+		<div id="question-box" class="hidden">
 	    	<div id="questions">
 				<h3>Question 0</h3>
         		<p class="question" id="question">Oh no! There seems to be an error loading questions.</p>
@@ -59,5 +59,6 @@
       		</div>
 		</div>
 	</section>
+	<script src="assets/js/script.js"></script>
 </body>
 </html>
