Add functions that cycle through intro messages after mode select

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
 
 	
 		<!-- Game Card Section, the main portion of the game -->
-	
 		<div id="creature-box" class="hidden">
 			<div id="danger-box">
 			<div class="danger-square" id="danger-square-05"></div>
@@ -50,7 +49,10 @@
 	    	<div id="text-box">
 			</div>
 			<div id="btn-box">
-				<button id="next-btn">></button>
+				<button class="hidden" id="next-btn-01">>></button>
+				<button class="hidden" id="next-btn-02">>></button>
+				<button class="hidden" id="next-btn-03">>></button>
+				<button class="hidden" id="next-btn-04">>></button>
 			</div>
 			<div id="questions" class="hidden">
 				<h3>Question 0</h3>
