Add function that loads questions after intro message

--- a/index.html
+++ b/index.html
@@ -55,14 +55,12 @@
 				<button class="hidden" id="next-btn-04">>></button>
 			</div>
 			<div id="questions" class="hidden">
-				<h3>Question 0</h3>
-        		<p class="question" id="question">Oh no! There seems to be an error loading questions.</p>
       		</div>
       		<div id="answers" class="hidden">
-        		<button id="answer1-btn" class="btn" value="A" aria-label="Answer Button A">Answer A</button><br>
-        		<button id="answer2-btn" class="btn" value="B" aria-label="Answer Button B">Answer B</button><br>
-        		<button id="answer3-btn" class="btn" value="C" aria-label="Answer Button C">Answer C</button><br>
-        		<button id="answer4-btn" class="btn" value="D" aria-label="Answer Button D">Answer D</button><br>
+        		<button id="answer-btn-a" class="btn answer-btn" value="A" aria-label="Answer Button A">Answer A</button><br>
+        		<button id="answer-btn-b" class="btn answer-btn" value="B" aria-label="Answer Button B">Answer B</button><br>
+        		<button id="answer-btn-c" class="btn answer-btn" value="C" aria-label="Answer Button C">Answer C</button><br>
+        		<button id="answer-btn-d" class="btn answer-btn" value="D" aria-label="Answer Button D">Answer D</button><br>
       		</div>
 		</div>
 	</section>
