Add function to change zombie img src. Was unable to change background image url so switched to img element.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 	
 		<!-- Game Card Section, the main portion of the game -->
 		<div id="creature-box" class="hidden">
+			<img id="zombie" src="assets/images/zombie-approach-01.webp" height="290px">
 			<div id="danger-box">
 			<div class="danger-square" id="danger-square-05"></div>
 			<div class="danger-square" id="danger-square-04"></div>	
@@ -49,10 +50,10 @@
 	    	<div id="text-box">
 			</div>
 			<div id="btn-box">
-				<button class="hidden" id="next-btn-01">>></button>
-				<button class="hidden" id="next-btn-02">>></button>
-				<button class="hidden" id="next-btn-03">>></button>
-				<button class="hidden" id="next-btn-04">>></button>
+				<button class="hidden" id="next-btn-01">next &gt&gt</button>
+				<button class="hidden" id="next-btn-02">next &gt&gt</button>
+				<button class="hidden" id="next-btn-03">next &gt&gt</button>
+				<button class="hidden" id="next-btn-04">next &gt&gt</button>
 			</div>
 			<div id="questions" class="hidden">
       		</div>
