Modify function that generates random question from array to avoid repitition. Also add array of zombie img src urls.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	
 		<!-- Game Card Section, the main portion of the game -->
 		<div id="creature-box" class="hidden">
-			<img id="zombie" src="assets/images/zombie-approach-01.webp" height="290px">
+			<img id="zombie" src="" height="290px">
 			<div id="danger-box">
 			<div class="danger-square" id="danger-square-05"></div>
 			<div class="danger-square" id="danger-square-04"></div>	
