--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 			</div>
 		</div>
 
-	
 		<!-- Game Card Section, the main portion of the game -->
 		<div id="creature-box" class="hidden">
 			<img id="zombie" src="" height="290px">
@@ -65,6 +64,16 @@
       		</div>
 		</div>
 	</section>
+	<div class="flex-container" id="shadow-box">
+		<div id="win-state" class="hidden">
+			<h1>YOU SURVIVED</h1>
+			<p id="win-text"></p>
+		</div>
+		<div id="fail-state" class="hidden">
+			<h1>YOU FAILED</h1>
+			<p id="fail-text"></p>
+		</div>
+	</div>
 	<script src="assets/js/script.js"></script>
 </body>
 </html>
