Fit zombie img src index to number of lives and adjust fail condition

--- a/index.html
+++ b/index.html
@@ -36,11 +36,21 @@
 		<div id="creature-box" class="hidden">
 			<img id="zombie" src="" height="290px">
 			<div id="danger-box">
-			<div class="danger-square" id="danger-square-05"></div>
-			<div class="danger-square" id="danger-square-04"></div>	
-			<div class="danger-square" id="danger-square-03"></div>
-			<div class="danger-square" id="danger-square-02"></div>
-			<div class="danger-square" id="danger-square-01"></div>
+				<div class="danger-square" id="danger-square-05">
+					<img width="100%">
+				</div>
+				<div class="danger-square" id="danger-square-04">
+					<img width="100%">
+				</div>	
+				<div class="danger-square" id="danger-square-03">
+					<img width="100%">
+				</div>
+				<div class="danger-square" id="danger-square-02">
+					<img width="100%">
+				</div>
+				<div class="danger-square" id="danger-square-01">
+					<img width="100%">
+				</div>
 			</div>
 			<div id="view-box">
 			</div>
