Edit css for a more consistent appearance. Remove unused code

--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
 		</div>
 
 		<!-- Game Card Section, the main portion of the game -->
+		<div id="game-card">
 		<div id="creature-box" class="hidden">
-			<img id="zombie" src="" height="290px">
+			<img id="zombie" src="assets/images/zombie-approach-00.webp" height="290px">
 			<div id="danger-box">
 				<div class="danger-square" id="danger-square-05">
 					<img width="100%">
@@ -67,7 +68,7 @@
 		<div id="question-box" class="hidden">
 	    	<div id="text-box">
 			</div>
-			<div id="btn-box">
+			<div id="next-btn-box">
 				<button class="hidden" id="next-btn-01">next &gt&gt</button>
 				<button class="hidden" id="next-btn-02">next &gt&gt</button>
 				<button class="hidden" id="next-btn-03">next &gt&gt</button>
@@ -82,7 +83,7 @@
         		<button id="answer-btn-d" class="btn answer-btn" value="D" aria-label="Answer Button D">Answer D</button><br>
       		</div>
 		</div>
-	</section>
+	
 	<div class="flex-container" id="shadow-box">
 		<div id="win-state" class="hidden">
 			<h1>YOU SURVIVED</h1>
@@ -93,6 +94,8 @@
 			<p id="fail-text"></p>
 		</div>
 	</div>
+	</div>
+	</section>
 	<script src="assets/js/script.js"></script>
 </body>
 </html>
