Add coloured danger-bar that increases with danger level/lives lost

--- a/index.html
+++ b/index.html
@@ -44,25 +44,25 @@
 		<!-- Game Card Section, the main portion of the game -->
 		<div id="game-card">
 		<div id="creature-box" class="hidden">
-			<img id="zombie" src="assets/images/zombie-approach-00.webp" height="290px">
 			<div id="danger-box">
 				<div class="danger-square" id="danger-square-05">
-					<img width="100%">
+					<img width="100%" src="assets/images/danger-block-05.webp" class="hidden">
 				</div>
 				<div class="danger-square" id="danger-square-04">
-					<img width="100%">
+					<img width="100%" src="assets/images/danger-block-04.webp" class="hidden">
 				</div>	
 				<div class="danger-square" id="danger-square-03">
-					<img width="100%">
+					<img width="100%" src="assets/images/danger-block-03.webp" class="hidden">
 				</div>
 				<div class="danger-square" id="danger-square-02">
-					<img width="100%">
+					<img width="100%" src="assets/images/danger-block-02.webp" class="hidden">
 				</div>
 				<div class="danger-square" id="danger-square-01">
-					<img width="100%">
+					<img width="100%" src="assets/images/danger-block-01.webp" class="hidden">
 				</div>
 			</div>
 			<div id="view-box">
+				<img id="zombie" src="assets/images/zombie-approach-00.webp" height="100%">
 			</div>
 		</div>
 		<div id="question-box" class="hidden">
