--- a/index.html
+++ b/index.html
@@ -45,20 +45,20 @@
 		<div id="game-card">
 		<div id="creature-box" class="hidden">
 			<div id="danger-box">
-				<div class="danger-square" id="danger-square-05">
-					<img width="100%" src="assets/images/danger-block-05.webp" class="hidden">
+				<div class="danger-square" >
+					<img width="100%" id="danger-square-05" src="assets/images/danger-block-05.webp" class="hidden">
 				</div>
-				<div class="danger-square" id="danger-square-04">
-					<img width="100%" src="assets/images/danger-block-04.webp" class="hidden">
+				<div class="danger-square" >
+					<img width="100%" id="danger-square-04" src="assets/images/danger-block-04.webp" class="hidden">
 				</div>	
-				<div class="danger-square" id="danger-square-03">
-					<img width="100%" src="assets/images/danger-block-03.webp" class="hidden">
+				<div class="danger-square">
+					<img width="100%" id="danger-square-03" src="assets/images/danger-block-03.webp" class="hidden">
 				</div>
-				<div class="danger-square" id="danger-square-02">
-					<img width="100%" src="assets/images/danger-block-02.webp" class="hidden">
+				<div class="danger-square">
+					<img width="100%" id="danger-square-02" src="assets/images/danger-block-02.webp" class="hidden">
 				</div>
-				<div class="danger-square" id="danger-square-01">
-					<img width="100%" src="assets/images/danger-block-01.webp" class="hidden">
+				<div class="danger-square">
+					<img width="100%" id="danger-square-01" src="assets/images/danger-block-01.webp" class="hidden">
 				</div>
 			</div>
 			<div id="view-box">
