Add nav bar to top of screen with fontawsome icons

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 <body>
 	<!-- Main game container -->
 	<section class="flex-container">
+		<nav id="info-box">
+			<i class="fa-solid fa-house"></i>
+			<i class="fa-solid fa-volume-off"></i>
+			<i class="fa-solid fa-circle-info"></i>
+			</nav>
 		<!-- Title Card Section, first thing user will see -->
 		<div id="title-card">
-			<div class="info-box">
-			</div>
-			<div class="info-box">
-				<i class="fa-solid fa-circle-info" style="color: #808080;"></i>
-			</div>
 			<h1 id="title">TRIVIA SURVIVOR</h1>
 			<h3 id="sub-title">[Demo of the Dead]</h3>
 			<!-- username entry -->
@@ -43,24 +43,24 @@
 
 		<!-- Game Card Section, the main portion of the game -->
 		<div id="game-card">
-		<div id="creature-box" class="hidden">
-			<div id="danger-box">
-				<div class="danger-square" >
-					<img width="100%" id="danger-square-05" src="assets/images/danger-block-05.webp" class="hidden">
+			<div id="creature-box" class="hidden">
+				<div id="danger-box">
+					<div class="danger-square" >
+						<img width="100%" id="danger-square-05" src="assets/images/danger-block-05.webp" class="hidden">
+					</div>
+					<div class="danger-square" >
+						<img width="100%" id="danger-square-04" src="assets/images/danger-block-04.webp" class="hidden">
+					</div>	
+					<div class="danger-square">
+						<img width="100%" id="danger-square-03" src="assets/images/danger-block-03.webp" class="hidden">
+					</div>
+					<div class="danger-square">
+						<img width="100%" id="danger-square-02" src="assets/images/danger-block-02.webp" class="hidden">
+					</div>
+					<div class="danger-square">
+						<img width="100%" id="danger-square-01" src="assets/images/danger-block-01.webp" class="hidden">
+					</div>
 				</div>
-				<div class="danger-square" >
-					<img width="100%" id="danger-square-04" src="assets/images/danger-block-04.webp" class="hidden">
-				</div>	
-				<div class="danger-square">
-					<img width="100%" id="danger-square-03" src="assets/images/danger-block-03.webp" class="hidden">
-				</div>
-				<div class="danger-square">
-					<img width="100%" id="danger-square-02" src="assets/images/danger-block-02.webp" class="hidden">
-				</div>
-				<div class="danger-square">
-					<img width="100%" id="danger-square-01" src="assets/images/danger-block-01.webp" class="hidden">
-				</div>
-			</div>
 			<div id="view-box">
 				<img id="zombie" src="assets/images/zombie-approach-00.webp" height="100%">
 			</div>
