Add star icon to nav bar for scores page

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 			<i class="fa-solid fa-house"></i>
 			<i class="fa-solid fa-volume-off"></i>
 			<i class="fa-solid fa-circle-info"></i>
+			<i class="fa-solid fa-star"></i>
 			</nav>
 		<!-- Title Card Section, first thing user will see -->
 		<div id="title-card">
