Add right/wrong answer messages in array and edit win/fail screens

--- a/index.html
+++ b/index.html
@@ -89,10 +89,12 @@
 			<div id="win-state" class="hidden">
 				<h1>YOU SURVIVED</h1>
 				<p id="win-text"></p>
+				<button>Return</button>
 			</div>
 			<div id="fail-state" class="hidden">
 				<h1>YOU FAILED</h1>
 				<p id="fail-text"></p>
+				<button>Return</button>
 			</div>
 		</div>
 	</section>
