Add function to nav bar icons and edit info and score pages

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 	<!-- Main game container -->
 	<section class="flex-container">
 		<nav id="info-box">
-			<i class="fa-solid fa-house"></i>
-			<i class="fa-solid fa-volume-off"></i>
-			<i class="fa-solid fa-circle-info"></i>
-			<i class="fa-solid fa-star"></i>
+			<i class="fa-solid fa-house" id="home-btn"></i>
+			<i class="fa-solid fa-volume-off" id="sound-btn"></i>
+			<i class="fa-solid fa-circle-info" id="info-btn"></i>
+			<i class="fa-solid fa-star" id="score-btn"></i>
 			</nav>
 		<!-- Title Card Section, first thing user will see -->
 		<div id="title-card" class="card">
@@ -85,7 +85,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="info-card" class="card">
+		<div id="results-card" class="card">
 			<div id="win-state" class="hidden">
 				<h1>YOU SURVIVED</h1>
 				<p id="win-text"></p>
@@ -96,6 +96,20 @@
 				<p id="fail-text"></p>
 				<button>Return</button>
 			</div>
+		</div>
+		<div id="score-card" class="card">
+			<div id="survivor-box">
+				<h1>SURVIVED</h1>
+				<p id="survivors"><ul></ul></p>
+			</div>
+			<div id="failure-box">
+				<h1>FAILED</h1>
+				<p id="failures"><ul></ul></p>
+			</div>
+		</div>
+		<div id="info-card" class="card">
+			<h1>INFORMATION</h1>
+			<p>Trivia Survivor is a survival quiz game.<br><br>The rules are simple.<br><br>You must test your knowledge of movie-triva against an approaching threat.<br><br>The creature stalking you will advance a step with every wrong answer.<br><br>Answer all 10 questions to survive.<br><br>Good luck.<br></p>
 		</div>
 	</section>
 	<script src="assets/js/script.js"></script>
