Add functional replay buttons to win/lose screens

--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
 			<div id="win-state" class="hidden">
 				<h1>YOU SURVIVED</h1>
 				<p id="win-text"></p>
-				<button>Return</button>
+				<button id="win-replay-btn">Return</button>
 			</div>
 			<div id="fail-state" class="hidden">
 				<h1>YOU FAILED</h1>
 				<p id="fail-text"></p>
-				<button>Return</button>
+				<button id="fail-replay-btn">Return</button>
 			</div>
 		</div>
 		<div id="score-card" class="card">
