Add media query setting for landscape/portrait view Also tweak some css overall

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<i class="fa-solid fa-star" id="score-btn"></i>
 				<i class="fa-solid fa-comment" id="comment-btn"></i>
 			</nav>
-			<div>
+			<div id="label-box">
 				<p id="home-label" class="hidden">Home</p>
 				<p id="sound-label" class="hidden">Sound is off</p>
 				<p id="info-label" class="hidden">About the game</p>
@@ -123,7 +123,7 @@
 		</div>
 	<div id="comment-card" class="card">
 		<h1>FEEDBACK</h1>
-		<p>Thank you for checking out Trivia Survivor. Please consider leaving a comment on your experience with the game.</p>
+		<p>Thank you for checking out Trivia Survivor. <br>Please consider leaving a comment on your experience with the game.</p>
 		<div id="feedback-form">
 			<form method="post" action="javascript:void(0);" onsubmit="commentSubmit()" id="comment-form">
 			<label for="name">Name:</label><br>
