--- a/index.html
+++ b/index.html
@@ -121,11 +121,13 @@
 				<h1>FAILED</h1>
 				<p id="failures"><ul></ul></p>
 			</div>
+	<button id="continue-btn-score">Continue</button>
 		</div>
 		<!-- Description of the game -->
 		<div id="info-card" class="card">
 			<h1>INFORMATION</h1>
 			<p>Trivia Survivor is a survival quiz game.<br><br>The rules are simple.<br><br>You must test your knowledge of movie-triva against an approaching threat.<br><br>The creature stalking you will advance a step with every wrong answer.<br><br>Answer all 10 questions to survive.<br><br>Good luck.<br></p>
+			<button id="continue-btn-info">Continue</button>
 		</div>
 	<!-- A feedback form -->
 	<div id="comment-card" class="card">
@@ -142,6 +144,7 @@
 			<div id="contact-form-button-wrap">
 				<button type="submit" id="submit" value="Send">Leave Feedback</button></div><br>
         	</form>
+			<button id="continue-btn-comment">Continue</button>
 			</div>
 	</div>
 	</section>
