Slight edit to info card style

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 		<!-- Description of the game -->
 		<div id="info-card" class="card">
 			<h1>INFORMATION</h1>
-			<p>Trivia Survivor is a survival quiz game.<br><br>The rules are simple.<br><br>You must test your knowledge of movie-triva against an approaching threat.<br><br>The creature stalking you will advance a step with every wrong answer.<br><br>Answer all 10 questions to survive.<br><br>Good luck.<br></p>
+			<p>Trivia Survivor is a survival quiz game.<br><br>The rules are simple.<br><br>You must test your knowledge of movie-triva against an approaching threat.<br><br>The creature stalking you will advance a step with every wrong answer.<br><br>Answer all 10 questions to survive.<br><br>Good luck.</p>
 			<button id="continue-btn-info">Continue</button>
 		</div>
 	<!-- A feedback form -->
