Altered fomr id labeling due to an error

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<div id="enter-name">
 				<form action="javascript:void(0);" onsubmit="chooseDifficulty()">
 				<label for="name">Enter your name to begin:</label><br>
-				<input type="text" id="user-name" name="name" placeholder="Name" required><br>
+				<input type="text" id="name" name="name" placeholder="Name" required><br>
 				<button type="submit" name="start-btn" id="start-btn" class="start-btn btn">Start</button>
 				</form>
 			</div>
@@ -135,8 +135,8 @@
 		<p>Thank you for checking out Trivia Survivor. <br>Please consider leaving a comment on your experience with the game.</p>
 		<div id="feedback-form">
 			<form method="post" action="javascript:void(0);" onsubmit="commentSubmit()" id="comment-form">
-			<label for="name">Name:</label><br>
-			<input type="text" id="name" name="name" placeholder="Name" required><br>
+			<label for="fname">Name:</label><br>
+			<input type="text" id="fname" name="fname" placeholder="Name" required><br>
 			<label for="email">Email:</label><br>
 			<input type="email" id="email" name="email-address" placeholder="Email address" required><br>
 			<label for="comment">Your Comment:</label><br>
