--- a/index.html
+++ b/index.html
@@ -8,6 +8,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes, maximum-scale=10">
     <link rel="stylesheet" href="assets/css/style.css">
 	<script src="https://kit.fontawesome.com/5216db6454.js" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+	<script type="text/javascript">
+        (function() {
+            // https://dashboard.emailjs.com/admin/account
+            emailjs.init('3Q0SMJLBwZIF-Uvwg');
+        })();
+    </script>
+    <script type="text/javascript">
+        window.onload = function() {
+            document.getElementById('contact-form').addEventListener('submit', function(event) {
+                event.preventDefault();
+                // generate a five digit number for the contact_number variable
+                this.contact_number.value = Math.random() * 100000 | 0;
+                // these IDs from the previous steps
+                emailjs.sendForm('contact_service', 'contact_form', this)
+                    .then(function() {
+                        console.log('SUCCESS!');
+                    }, function(error) {
+                        console.log('FAILED...', error);
+                    });
+            });
+        }
+    </script>
 	<title>Trivia Survivor</title>
 	
 </head>
@@ -134,16 +157,16 @@
 		<h1>FEEDBACK</h1>
 		<p>Thank you for checking out Trivia Survivor. <br>Please consider leaving a comment on your experience with the game.</p>
 		<div id="feedback-form">
-			<form method="post" action="javascript:void(0);" id="comment-form" onSubmit="commentSubmit()">
-			<label for="fname">Name:</label><br>
-			<input type="text" id="fname" name="fname" placeholder="Name" required><br>
-			<label for="email">Email:</label><br>
-			<input type="email" id="email" name="email-address" placeholder="Email address" required><br>
-			<label for="comment">Your Comment:</label><br>
-			<textarea id="comment" name="comment" placeholder="..." required></textarea><br><br>
-			<div id="contact-form-button-wrap">
-				<button type="submit" id="comment-btn">Leave Feedback</button></div><br>
-        	</form>
+			<form id="contact-form">
+        <input type="hidden" name="contact_number">
+        <label>Name</label>
+        <input type="text" name="user_name">
+        <label>Email</label>
+        <input type="email" name="user_email">
+        <label>Message</label>
+        <textarea name="message"></textarea>
+        <input type="submit" value="Send">
+    </form>
 			<button id="continue-btn-comment">Continue</button>
 		</div>
 	</div>
