--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
                 // these IDs from the previous steps
                 emailjs.sendForm('service_pmzmnla', 'contact-form', this)
                     .then(function() {
-                        console.log('SUCCESS!');
+					alert('Thank you for your feedback.');
+					document.getElementById('contact-form').reset();
                     }, function(error) {
-                        console.log('FAILED...', error);
+                        alert("I'm sorry, the form failed to send.");
                     });
             });
         }
